--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,9 +66,11 @@ jobs:
     steps:
     - name: checkout
       uses: actions/checkout@v1
+
     - uses: conda-incubator/setup-miniconda@v1
       with:
         auto-update-conda: true
+        activate-environment: ""
         python-version: ${{ matrix.python-version }}
 
     - name: set up environment
@@ -121,9 +123,11 @@ jobs:
     steps:
     - name: checkout
       uses: actions/checkout@v1
+
     - uses: conda-incubator/setup-miniconda@v1
       with:
         auto-update-conda: true
+        activate-environment: ""
         python-version: ${{ matrix.python-version }}
 
     - name: set up environment
@@ -154,9 +158,11 @@ jobs:
     steps:
     - name: checkout
       uses: actions/checkout@v1
+
     - uses: conda-incubator/setup-miniconda@v1
       with:
         auto-update-conda: true
+        activate-environment: ""
         python-version: ${{ matrix.python-version }}
 
     - name: set up environment
@@ -177,9 +183,11 @@ jobs:
     steps:
     - name: checkout
       uses: actions/checkout@v1
+
     - uses: conda-incubator/setup-miniconda@v1
       with:
         auto-update-conda: true
+        activate-environment: ""
         python-version: ${{ matrix.python-version }}
 
     - name: set up environment
@@ -200,6 +208,7 @@ jobs:
     - uses: conda-incubator/setup-miniconda@v1
       with:
         auto-update-conda: true
+        activate-environment: ""
         python-version: ${{ matrix.python-version }}
 
     - name: set up environment
@@ -246,6 +255,7 @@ jobs:
     - uses: conda-incubator/setup-miniconda@v1
       with:
         auto-update-conda: true
+        activate-environment: ""
         python-version: ${{ matrix.python-version }}
 
 
