use correct bash shell invocation

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -167,9 +167,11 @@ jobs:
 
     - name: set up environment
       run: ./ci/setup_env.sh "${{ matrix.python_version }}" "$BACKENDS"
+      shell: bash -l {0}
 
     - name: run tests
       run: PYTEST_BACKENDS=$BACKENDS PYTEST_EXPRESSION="not hdfs" ./ci/run_tests.sh
+      shell: bash -l {0}
 
   Tests_spark:
     name: Tests PySpark / Spark
@@ -192,9 +194,11 @@ jobs:
 
     - name: set up environment
       run: ./ci/setup_env.sh "${{ matrix.python_version }}" "$BACKENDS"
+      shell: bash -l {0}
 
     - name: run tests
       run: PYTEST_BACKENDS=$BACKENDS PYTEST_EXPRESSION="not hdfs" ./ci/run_tests.sh
+      shell: bash -l {0}
 
 
   Lint_and_benchmarks:
@@ -213,25 +217,30 @@ jobs:
 
     - name: set up environment
       run: ./ci/setup_env.sh
+      shell: bash -l {0}
 
     - name: black
       run: black --check .
       if: always()
+      shell: bash -l {0}
 
     - name: mypy
       # TODO: mypy has errors that need to be fixed before it can be added
       run: mypy --ignore-missing-imports ibis || true
       if: always()
+      shell: bash -l {0}
 
     - name: pydocstyle
       # TODO: change match-dir when docstrings are fixed for other backends
       run: pydocstyle --match-dir="(ibis|omniscidb)"
       if: always()
+      shell: bash -l {0}
 
     - name: isort
       # TODO: isort has errors that need to be fixed before it can be added
       run: isort --check-only . || true
       if: always()
+      shell: bash -l {0}
 
     - name: publish feedstock artifact
       uses: actions/upload-artifact@master
@@ -243,6 +252,7 @@ jobs:
     - name: benckmark
       run: ./ci/benchmark.sh azure "${{ github.sha }}"
       if: always()
+      shell: bash -l {0}
 
   Conda_package:
     name: Conda package
@@ -258,12 +268,13 @@ jobs:
         activate-environment: ""
         python-version: ${{ matrix.python-version }}
 
-
     - name: set up environment
       run: ./ci/setup_env.sh
+      shell: bash -l {0}
 
     - name: clone feedstock repo
       run: git clone https://github.com/conda-forge/ibis-framework-feedstock /tmp/feedstock
+      shell: bash -l {0}
 
     - name: update recipe file
       run: |
@@ -288,9 +299,11 @@ jobs:
 
         echo "*** Modified recipe:"
         cat meta.yaml
+      shell: bash -l {0}
 
     - name: build recipe
       run: conda build -c conda-forge --python 3.7 /tmp/feedstock/recipe
+      shell: bash -l {0}
 
     - name: deploy recipe package
       run: |
@@ -298,3 +311,4 @@ jobs:
         cp -r /usr/share/miniconda/conda-bld/noarch /tmp/packages/noarch
         cp -r /usr/share/miniconda/conda-bld/linux-64 /tmp/packages/linux-64
         conda index /tmp/packages
+      shell: bash -l {0}
