--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,15 +24,17 @@ jobs:
       with:
         auto-update-conda: true
         python-version: ${{ matrix.python_version }}
+        activate-environment: "ibis-dev"
+        environment-file: "environment.yml"
     - name: set up environment
       run: |
-        conda activate base
+        conda activate ibis-dev
         ./ci/setup_env.sh "${{ matrix.python_version }}" "$BACKENDS"
       shell: bash -l {0}
 
     - name: run tests
       run: |
-        conda activate base
+        conda activate ibis-dev
         PYTEST_BACKENDS=$BACKENDS PYTEST_EXPRESSION="not hdfs" ./ci/run_tests.sh
       shell: bash -l {0}
 
@@ -70,8 +72,9 @@ jobs:
     - uses: conda-incubator/setup-miniconda@v1
       with:
         auto-update-conda: true
-        activate-environment: ""
         python-version: ${{ matrix.python_version }}
+        activate-environment: "ibis-dev"
+        environment-file: "environment.yml"
 
     - name: set up environment
       run: ./ci/setup_env.sh "${{ matrix.python_version }}" "$BACKENDS"
@@ -127,8 +130,9 @@ jobs:
     - uses: conda-incubator/setup-miniconda@v1
       with:
         auto-update-conda: true
-        activate-environment: ""
         python-version: ${{ matrix.python_version }}
+        activate-environment: "ibis-dev"
+        environment-file: "environment.yml"
 
     - name: set up environment
       run: ./ci/setup_env.sh "${{ matrix.python_version }}" "$BACKENDS"
@@ -162,8 +166,9 @@ jobs:
     - uses: conda-incubator/setup-miniconda@v1
       with:
         auto-update-conda: true
-        activate-environment: ""
         python-version: ${{ matrix.python_version }}
+        activate-environment: "ibis-dev"
+        environment-file: "environment.yml"
 
     - name: set up environment
       run: ./ci/setup_env.sh "${{ matrix.python_version }}" "$BACKENDS"
@@ -189,8 +194,9 @@ jobs:
     - uses: conda-incubator/setup-miniconda@v1
       with:
         auto-update-conda: true
-        activate-environment: ""
         python-version: ${{ matrix.python_version }}
+        activate-environment: "ibis-dev"
+        environment-file: "environment.yml"
 
     - name: set up environment
       run: ./ci/setup_env.sh "${{ matrix.python_version }}" "$BACKENDS"
@@ -212,8 +218,9 @@ jobs:
     - uses: conda-incubator/setup-miniconda@v1
       with:
         auto-update-conda: true
-        activate-environment: ""
         python-version: ${{ matrix.python_version }}
+        activate-environment: "ibis-dev"
+        environment-file: "environment.yml"
 
     - name: set up environment
       run: ./ci/setup_env.sh
@@ -265,8 +272,9 @@ jobs:
     - uses: conda-incubator/setup-miniconda@v1
       with:
         auto-update-conda: true
-        activate-environment: ""
         python-version: ${{ matrix.python_version }}
+        activate-environment: "ibis-dev"
+        environment-file: "environment.yml"
 
     - name: set up environment
       run: ./ci/setup_env.sh
