--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -143,6 +143,9 @@ jobs:
         environment-file: "environment.yml"
 
     - name: set up environment
+      env:
+        IBIS_TEST_IMPALA_HOST: "127.0.0.1"
+        IBIS_TEST_NN_HOST: "127.0.0.1"
       run: ./ci/setup_env.sh "${{ matrix.python_version }}" "$BACKENDS"
       shell: bash -l {0}
 
