--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -144,8 +144,8 @@ jobs:
 
     - name: set up environment
       env:
-        IBIS_TEST_IMPALA_HOST: "127.0.0.1"
-        IBIS_TEST_NN_HOST: "127.0.0.1"
+        IBIS_TEST_IMPALA_HOST: "impala"
+        IBIS_TEST_NN_HOST: "impala"
       run: ./ci/setup_env.sh "${{ matrix.python_version }}" "$BACKENDS"
       shell: bash -l {0}
 
