--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -87,7 +87,6 @@ jobs:
   Tests_impala_clickhouse:
     name: Tests Impala / Clickhouse
     runs-on: ubuntu-latest
-    container: continuumio/miniconda3
     env:
       BACKENDS: "impala clickhouse"
     strategy:
@@ -134,29 +133,23 @@ jobs:
       uses: actions/checkout@v1
 
     - name: check host settings
-      run: cat /etc/hosts
-
-    - name: setup conda
       run: |
-        conda create --name ibis-dev python=${{ matrix.python_version }} pip
-        conda activate ibis-dev
-        conda env update --file environment.yml
-      shell: bash -l {0}
+        cat /etc/hosts
+        cat /etc/resolv.conf
 
+    - uses: conda-incubator/setup-miniconda@v1
+      with:
+        auto-update-conda: true
+        python-version: ${{ matrix.python_version }}
+        activate-environment: "ibis-dev"
+        environment-file: "environment.yml"
 
     - name: set up environment
-      env:
-        IBIS_TEST_IMPALA_HOST: "impala"
-        IBIS_TEST_NN_HOST: "impala"
-      run: |
-        conda activate ibis-dev
-        ./ci/setup_env.sh "${{ matrix.python_version }}" "$BACKENDS"
+      run: ./ci/setup_env.sh "${{ matrix.python_version }}" "$BACKENDS"
       shell: bash -l {0}
 
     - name: run tests
-      run: |
-        conda activate ibis-dev
-        PYTEST_BACKENDS=$BACKENDS ./ci/run_tests.sh
+      run: PYTEST_BACKENDS=$BACKENDS ./ci/run_tests.sh
       shell: bash -l {0}
 
   # Tests_omniscidb:
